--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,25 @@
+body{
+    display:flex;
+}
 
+section {
+display: flex;
+flex-direction: column;
+flex: 1;
+align-items: center;
+}
+
+.dot1, .dot2{
+height: 10px;
+width: 10px;
+border-radius: 50%;
+display: inline-block;
+}
+
+.dot1{
+    background-color: red;
+}
+
+.dot2{
+    background-color: red;
+}
