--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,26 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body{
-    display:flex;
+    background: linear-gradient(#e92e3d, #ff6e6a);
+    height: 100vh;
+    color: red;
+}
+
+body > div {
+display: flex;
+position: absolute;
+transform: translate(-50%,-50%);
+top: 50%;
+left: 50%;
+background-color: white;
+height: 75vh;
+width: 75vw;
+margin: auto auto;
+box-shadow: 0 15px 35px rgba(50,50,50,0.15);
+border-radius: 15px;
 }
 
 section {
@@ -9,11 +30,46 @@ flex: 1;
 align-items: center;
 }
 
+.control {
+justify-content: space-between;
+background-color: whitesmoke;
+}
+
 .dot1, .dot2{
 height: 10px;
 width: 10px;
 border-radius: 50%;
 display: inline-block;
+}
+
+.control > .dice{
+width: 25%;
+background-color: red;
+display: flex;
+box-shadow: 0 15px 35px rgba(50,50,50,0.15);
+}
+
+.control > .dice::after{
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+}
+
+button {
+z-index: 2;
+font-family: Arial, Helvetica, sans-serif;
+text-align: center;
+cursor: pointer;
+border: none;
+outline: none;
+padding: 15px;
+font-size: 20px;
+background-color: red;
+color: white;
+font-weight: bold;
+border-radius: 5px;
+letter-spacing: 1px;
+box-shadow: 0 15px 35px rgba(50,50,50,0.15);
 }
 
 .dot1{
@@ -22,4 +78,13 @@ display: inline-block;
 
 .dot2{
     background-color: red;
+}
+
+scan {
+    font-size: 2vw;
+}
+
+#Player1Score, #Player2Score {
+color: red;
+font-size: 5vw;
 }
