--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Lato;
 }
 
 body{
@@ -57,7 +58,6 @@ box-shadow: 0 15px 35px rgba(50,50,50,0.15);
 
 button {
 z-index: 2;
-font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 cursor: pointer;
 border: none;
@@ -87,4 +87,29 @@ scan {
 #Player1Score, #Player2Score {
 color: red;
 font-size: 5vw;
+}
+
+.shake {
+    animation: 0.5s infinite shake;
+}
+
+@keyframes shake {
+    0%{
+        transform: rotate(8deg);
+    }
+
+    100%{
+        transform: rotate(-8deg);
+    }
+}
+
+.currentScore {
+    position: absolute;
+    bottom: 40%;
+    color: white;
+    background-color: red;
+    border-radius: 5px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 15px 35px rgba(50,50,50,0.15);
 }
